Bug 1344156 - reps v0.4.0: update reps bundle from GitHub;r=tromey
MozReview-Commit-ID: 4vQozULRsrP

UltraBlame original commit: 8c4a7cc50c77f14ae205a60b46aa1e684712007a

--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_attribute.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_attribute.html
@@ -198,6 +198,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -212,6 +218,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 window
