--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_element-node.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_element-node.html
@@ -200,6 +200,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -214,6 +220,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 "
@@ -1884,10 +1896,16 @@ inspectIconClickedValue
 null
 ;
 let
+inspectIconClickedEvent
+=
+null
+;
+let
 onInspectIconClick
 =
 (
 object
+event
 )
 =
 >
@@ -1895,6 +1913,10 @@ object
 inspectIconClickedValue
 =
 object
+;
+inspectIconClickedEvent
+=
+event
 ;
 }
 ;
@@ -2080,6 +2102,36 @@ inspect
 icon
 is
 clicked
+"
+)
+;
+ok
+(
+inspectIconClickedEvent
+!
+=
+=
+null
+&
+&
+inspectIconClickedEvent
+.
+type
+=
+=
+=
+"
+click
+"
+"
+onInspectIconClick
+forwarded
+the
+original
+event
+to
+the
+callback
 "
 )
 ;
