--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_failure.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_failure.html
@@ -207,6 +207,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -221,6 +227,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 window
