--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_grip-map.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_grip-map.html
@@ -198,6 +198,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -212,6 +218,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 "
@@ -916,27 +928,33 @@ defaultOutput
 =
 Map
 {
+"
 key
 -
 a
+"
 :
 "
 value
 -
 a
 "
+"
 key
 -
 b
+"
 :
 "
 value
 -
 b
+"
 "
 key
 -
 c
+"
 :
 "
 value
@@ -1070,27 +1088,33 @@ defaultOutput
 =
 Map
 {
+"
 key
 -
 0
+"
 :
 "
 value
 -
 0
 "
+"
 key
 -
 1
+"
 :
 "
 value
 -
 1
+"
 "
 key
 -
 2
+"
 :
 "
 value
@@ -1141,11 +1165,13 @@ i
 )
 =
 >
+"
 key
 -
 {
 i
 }
+"
 :
 "
 value
@@ -1296,23 +1322,29 @@ defaultOutput
 =
 Map
 {
+"
 key
 -
 a
+"
 :
 null
+"
 key
 -
 c
+"
 :
 "
 value
 -
 c
 "
+"
 key
 -
 d
+"
 :
 4
 1
@@ -1324,28 +1356,36 @@ longOutput
 =
 Map
 {
+"
 key
 -
 a
+"
 :
 null
+"
 key
 -
 b
+"
 :
 undefined
+"
 key
 -
 c
+"
 :
 "
 value
 -
 c
 "
+"
 key
 -
 d
+"
 :
 4
 }
