--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_object.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_object.html
@@ -198,6 +198,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -212,6 +218,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 window
@@ -287,6 +299,21 @@ testMoreThanMaxProps
 ;
 yield
 testUninterestingProps
+(
+)
+;
+/
+/
+Test
+that
+unusual
+property
+names
+are
+escaped
+.
+yield
+testEscapedPropertyNames
 (
 )
 ;
@@ -808,6 +835,107 @@ testRepRenderModes
 modeTests
 "
 testUninterestingProps
+"
+componentUnderTest
+stub
+)
+;
+}
+function
+testEscapedPropertyNames
+(
+)
+{
+const
+stub
+=
+{
+"
+"
+:
+1
+"
+quote
+-
+this
+"
+:
+2
+noquotes
+:
+3
+}
+;
+const
+defaultOutput
+=
+Object
+{
+"
+"
+:
+1
+"
+quote
+-
+this
+"
+:
+2
+noquotes
+:
+3
+}
+;
+const
+modeTests
+=
+[
+{
+mode
+:
+undefined
+expectedOutput
+:
+defaultOutput
+}
+{
+mode
+:
+MODE
+.
+TINY
+expectedOutput
+:
+Object
+}
+{
+mode
+:
+MODE
+.
+SHORT
+expectedOutput
+:
+defaultOutput
+}
+{
+mode
+:
+MODE
+.
+LONG
+expectedOutput
+:
+defaultOutput
+}
+]
+;
+testRepRenderModes
+(
+modeTests
+"
+testEscapedPropertyNames
 "
 componentUnderTest
 stub
