--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_text-node.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_text-node.html
@@ -202,6 +202,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -216,6 +222,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 "
@@ -981,10 +993,16 @@ inspectIconClickedValue
 null
 ;
 let
+inspectIconClickedEvent
+=
+null
+;
+let
 onInspectIconClick
 =
 (
 object
+event
 )
 =
 >
@@ -992,6 +1010,10 @@ object
 inspectIconClickedValue
 =
 object
+;
+inspectIconClickedEvent
+=
+event
 ;
 }
 ;
@@ -1128,6 +1150,36 @@ inspect
 icon
 is
 clicked
+"
+)
+;
+ok
+(
+inspectIconClickedEvent
+!
+=
+=
+null
+&
+&
+inspectIconClickedEvent
+.
+type
+=
+=
+=
+"
+click
+"
+"
+onInspectIconClick
+forwarded
+the
+original
+event
+to
+the
+callback
 "
 )
 ;
