--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_comment-node.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_comment-node.html
@@ -202,6 +202,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -216,6 +222,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 "
