--- a/devtools/client/shared/components/reps/test/mochitest/test_reps_grip.html
+++ b/devtools/client/shared/components/reps/test/mochitest/test_reps_grip.html
@@ -198,6 +198,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 <
@@ -212,6 +218,12 @@ type
 application
 /
 javascript
+;
+version
+=
+1
+.
+8
 "
 >
 window
