Bug 1320880 - Add RTL support to date picker r=mconley
MozReview-Commit-ID: LIrOuUCfz17

UltraBlame original commit: ee721adb0e1034d8725e611d189a65f977dd3961

--- a/toolkit/themes/shared/datetimeinputpickers.css
+++ b/toolkit/themes/shared/datetimeinputpickers.css
@@ -573,7 +573,18 @@ nav
 >
 button
 .
-left
+prev
+.
+nav
+>
+button
+.
+next
+:
+dir
+(
+rtl
+)
 {
 background
 :
@@ -613,7 +624,18 @@ nav
 >
 button
 .
-right
+next
+.
+nav
+>
+button
+.
+prev
+:
+dir
+(
+rtl
+)
 {
 background
 :
@@ -683,6 +705,10 @@ left
 :
 3rem
 ;
+right
+:
+3rem
+;
 width
 :
 17
@@ -743,19 +769,40 @@ radius
 3rem
 ;
 padding
+-
+top
 :
 0
 .
 2rem
-2
-.
-6rem
+;
+padding
+-
+bottom
+:
 0
 .
 2rem
+;
+padding
+-
+inline
+-
+start
+:
 1
 .
 2rem
+;
+padding
+-
+inline
+-
+end
+:
+2
+.
+6rem
 ;
 }
 button
