Bug 1340661 - Manually draw checkbox and radio frames on Android. r=snorp,tnikkel
MozReview-Commit-ID: 8IiaRZNJs16

UltraBlame original commit: 8bd27accc2a065e12cd5f91bbfbe901bcffd787e

--- a/mobile/android/themes/core/content.css
+++ b/mobile/android/themes/core/content.css
@@ -704,6 +704,12 @@ input
 :
 not
 (
+:
+-
+moz
+-
+any
+(
 [
 type
 =
@@ -711,6 +717,21 @@ type
 image
 "
 ]
+[
+type
+=
+"
+checkbox
+"
+]
+[
+type
+=
+"
+radio
+"
+]
+)
 )
 {
 -
