Bug 1339006 - Specify event target if we run nsIURIClassifier.clasify() from content process.r=ehsan, r=gcp
MozReview-Commit-ID: BztjVMlQngi

UltraBlame original commit: 95981ff95b2099af500c43d144e3835bcf0cf030

--- a/toolkit/components/url-classifier/tests/mochitest/test_classifier.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_classifier.html
@@ -1059,11 +1059,12 @@ trackingProtection
 let
 result
 =
-service
+SpecialPowers
 .
-classify
+doUrlClassify
 (
 prin
+null
 test
 .
 trackingProtection
