--- a/toolkit/components/url-classifier/tests/mochitest/test_classifier_match.html
+++ b/toolkit/components/url-classifier/tests/mochitest/test_classifier_match.html
@@ -975,33 +975,6 @@ resolve
 >
 {
 let
-service
-=
-Cc
-[
-"
-mozilla
-.
-org
-/
-url
--
-classifier
-/
-dbservice
-;
-1
-"
-]
-.
-getService
-(
-Ci
-.
-nsIURIClassifier
-)
-;
-let
 ssm
 =
 Cc
@@ -1106,11 +1079,12 @@ uri
 }
 )
 ;
-service
+SpecialPowers
 .
-classify
+doUrlClassify
 (
 prin
+null
 false
 function
 (
