Bug 1338386 - Make it clear if request comes from the browser cache; r=Honza
MozReview-Commit-ID: zo6Mh0zK7Z

UltraBlame original commit: 166cfeeeab65110fc108dae81494730d90ff62ba

--- a/devtools/client/themes/netmonitor.css
+++ b/devtools/client/themes/netmonitor.css
@@ -4184,6 +4184,39 @@ semitransparent
 ;
 }
 .
+request
+-
+list
+-
+item
+.
+fromCache
+>
+.
+requests
+-
+list
+-
+subitem
+:
+not
+(
+.
+requests
+-
+list
+-
+waterfall
+)
+{
+opacity
+:
+0
+.
+6
+;
+}
+.
 theme
 -
 firebug
