Bug 1344376 - Clicking on a link with target=_blank should fire onCreatedNavigationTarget. r=billm
MozReview-Commit-ID: JVao8IuBz9B

UltraBlame original commit: 7fc04ff18b6c9420ef1f6e848924beb389e13990

--- a/browser/components/extensions/test/browser/webNav_createdTargetSource_subframe.html
+++ b/browser/components/extensions/test/browser/webNav_createdTargetSource_subframe.html
@@ -307,6 +307,81 @@ a
 li
 >
 <
+li
+>
+<
+a
+id
+=
+"
+test
+-
+create
+-
+new
+-
+tab
+-
+from
+-
+targetblank
+-
+click
+-
+subframe
+"
+href
+=
+"
+webNav_createdTarget
+.
+html
+#
+new
+-
+tab
+-
+from
+-
+targetblank
+-
+click
+-
+subframe
+"
+target
+=
+"
+_blank
+"
+>
+Open
+a
+target
+page
+in
+a
+new
+tab
+from
+click
+to
+link
+with
+target
+=
+"
+_blank
+"
+<
+/
+a
+>
+<
+/
+li
+>
+<
 /
 ul
 >
