--- a/browser/components/extensions/test/browser/webNav_createdTargetSource.html
+++ b/browser/components/extensions/test/browser/webNav_createdTargetSource.html
@@ -278,6 +278,77 @@ a
 li
 >
 <
+li
+>
+<
+a
+id
+=
+"
+test
+-
+create
+-
+new
+-
+tab
+-
+from
+-
+targetblank
+-
+click
+"
+href
+=
+"
+webNav_createdTarget
+.
+html
+#
+new
+-
+tab
+-
+from
+-
+targetblank
+-
+click
+"
+target
+=
+"
+_blank
+"
+>
+Open
+a
+target
+page
+in
+a
+new
+tab
+from
+click
+to
+link
+with
+target
+=
+"
+_blank
+"
+<
+/
+a
+>
+<
+/
+li
+>
+<
 /
 ul
 >
