Bug 1329942 - Fix alignment of webextensions permissions doorhanger r=florian
MozReview-Commit-ID: K0YM26lgOY5

UltraBlame original commit: 5a7fca706daab4f187b38c6918d73006178d2df4

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -17242,6 +17242,9 @@ weight
 bold
 ;
 }
+html
+|
+*
 .
 addon
 -
@@ -17249,15 +17252,68 @@ webext
 -
 perm
 -
-header
+list
 {
-font
+margin
 -
-size
+block
+-
+end
 :
-1
+0
+;
+padding
+-
+inline
+-
+start
+:
+10px
+;
+}
 .
-3em
+addon
+-
+webext
+-
+perm
+-
+text
+{
+margin
+-
+inline
+-
+start
+:
+0
+;
+}
+.
+popup
+-
+notification
+-
+description
+[
+popupid
+=
+"
+addon
+-
+webext
+-
+permissions
+"
+]
+{
+margin
+:
+0
+;
+padding
+:
+0
 ;
 }
 .
