Bug 1345323 - Fix issues with Firebug theme tabs. r=jdescottes
MozReview-Commit-ID: LJRvEObpydr

UltraBlame original commit: f3a38497ab1aafa857b1ca1a3f5cb9d382ee2e08

--- a/devtools/client/themes/firebug-theme.css
+++ b/devtools/client/themes/firebug-theme.css
@@ -811,16 +811,24 @@ margin
 ;
 padding
 :
-2px
+1px
 4px
-0
-4px
+!
+important
 ;
 border
 :
 1px
 solid
 transparent
+!
+important
+;
+border
+-
+bottom
+:
+none
 !
 important
 ;
@@ -868,6 +876,84 @@ width
 0
 ;
 }
+/
+*
+For
+toolbox
+tabs
+the
+negative
+margin
+is
+applied
+on
+the
+container
+instead
+of
+the
+tab
+to
+avoid
+triggering
+y
+-
+overflow
+on
+the
+container
+that
+causes
+the
+overflow
+menu
+to
+display
+*
+/
+.
+theme
+-
+firebug
+.
+devtools
+-
+tab
+{
+margin
+-
+bottom
+:
+0
+;
+}
+.
+theme
+-
+firebug
+.
+toolbox
+-
+tabs
+.
+theme
+-
+firebug
+#
+toolbox
+-
+option
+-
+container
+{
+margin
+-
+bottom
+:
+-
+1px
+;
+}
 .
 theme
 -
@@ -884,79 +970,6 @@ inline
 -
 end
 :
-0
-;
-}
-/
-*
-Tweak
-the
-margin
-and
-padding
-values
-differently
-for
-sidebar
-and
-the
-main
-tab
-bar
-*
-/
-.
-theme
--
-firebug
-.
-devtools
--
-tab
-.
-theme
--
-firebug
-.
-devtools
--
-tab
-.
-selected
-{
-padding
-:
-2px
-4px
-0
-4px
-;
-margin
-:
-3px
-1px
--
-1px
-;
-}
-.
-theme
--
-firebug
-.
-devtools
--
-sidebar
--
-tabs
-tab
-{
-margin
-:
-3px
-0
--
-1px
 0
 ;
 }
@@ -1043,21 +1056,13 @@ tab
 hover
 {
 border
+-
+color
 :
-1px
-solid
 #
 C8C8C8
 !
 important
-;
-border
--
-bottom
-:
-1px
-solid
-transparent
 ;
 }
 .
@@ -1105,9 +1110,9 @@ background
 )
 ;
 border
+-
+color
 :
-1px
-solid
 var
 (
 -
@@ -1167,21 +1172,6 @@ img
 display
 :
 none
-;
-}
-.
-theme
--
-firebug
-.
-toolbox
--
-tab
-label
-{
-margin
-:
-0
 ;
 }
 .
