Backed out changeset 5a7fca706daa (bug 1329942) for failing browser-chrome browser_bug553455.js. r=backout
UltraBlame original commit: 9dff76f7dd99dcee3ef3ffb1890b026c7c3c09b2

--- a/browser/themes/windows/browser.css
+++ b/browser/themes/windows/browser.css
@@ -17242,9 +17242,6 @@ weight
 bold
 ;
 }
-html
-|
-*
 .
 addon
 -
@@ -17252,68 +17249,15 @@ webext
 -
 perm
 -
-list
+header
 {
-margin
+font
 -
-block
--
-end
+size
 :
-0
-;
-padding
--
-inline
--
-start
-:
-10px
-;
-}
+1
 .
-addon
--
-webext
--
-perm
--
-text
-{
-margin
--
-inline
--
-start
-:
-0
-;
-}
-.
-popup
--
-notification
--
-description
-[
-popupid
-=
-"
-addon
--
-webext
--
-permissions
-"
-]
-{
-margin
-:
-0
-;
-padding
-:
-0
+3em
 ;
 }
 .
