--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -25545,9 +25545,6 @@ weight
 bold
 ;
 }
-html
-|
-*
 .
 addon
 -
@@ -25555,68 +25552,15 @@ webext
 -
 perm
 -
-list
+header
 {
-margin
+font
 -
-block
--
-end
+size
 :
-0
-;
-padding
--
-inline
--
-start
-:
-10px
-;
-}
+1
 .
-addon
--
-webext
--
-perm
--
-text
-{
-margin
--
-inline
--
-start
-:
-0
-;
-}
-.
-popup
--
-notification
--
-description
-[
-popupid
-=
-"
-addon
--
-webext
--
-permissions
-"
-]
-{
-margin
-:
-0
-;
-padding
-:
-0
+3em
 ;
 }
 .
