Bug 1337392 - Update test cases to match new cursor behavior. r=smaug
MozReview-Commit-ID: 4BdZyeqTBAx

UltraBlame original commit: cce6ce016dfa75e6fd0a90a9e5934417a04feed0

--- a/layout/base/tests/bug956530-1.html
+++ b/layout/base/tests/bug956530-1.html
@@ -75,10 +75,6 @@ test
 (
 )
 {
-focus
-(
-)
-;
 var
 i
 =
@@ -89,6 +85,26 @@ querySelector
 "
 input
 "
+)
+;
+i
+.
+setSelectionRange
+(
+i
+.
+value
+.
+length
+i
+.
+value
+.
+length
+)
+;
+focus
+(
 )
 ;
 synthesizeMouseAtCenter
