--- a/layout/forms/test/bug287446_subframe.html
+++ b/layout/forms/test/bug287446_subframe.html
@@ -168,7 +168,7 @@ t
 .
 value
 "
-TestFoo
+FooTest
 "
 "
 Typing
@@ -214,7 +214,7 @@ t
 .
 value
 "
-TestFoo
+FooTest
 "
 "
 Shouldn
@@ -241,7 +241,7 @@ t
 .
 value
 "
-TestFooBar
+FooBarTest
 "
 "
 Typing
