--- a/layout/base/tests/textarea-maxlength-ui-invalid-change.html
+++ b/layout/base/tests/textarea-maxlength-ui-invalid-change.html
@@ -138,6 +138,21 @@ textarea
 ;
 textarea
 .
+setSelectionRange
+(
+textarea
+.
+value
+.
+length
+textarea
+.
+value
+.
+length
+)
+textarea
+.
 focus
 (
 )
