--- a/layout/base/tests/textarea-minlength-invalid-change.html
+++ b/layout/base/tests/textarea-minlength-invalid-change.html
@@ -123,6 +123,21 @@ textarea
 ;
 textarea
 .
+setSelectionRange
+(
+textarea
+.
+value
+.
+length
+textarea
+.
+value
+.
+length
+)
+textarea
+.
 focus
 (
 )
