--- a/layout/base/tests/textarea-minlength-ui-valid-change.html
+++ b/layout/base/tests/textarea-minlength-ui-valid-change.html
@@ -133,6 +133,21 @@ textarea
 ;
 textarea
 .
+setSelectionRange
+(
+textarea
+.
+value
+.
+length
+textarea
+.
+value
+.
+length
+)
+textarea
+.
 focus
 (
 )
