--- a/layout/base/tests/textarea-minlength-valid-change.html
+++ b/layout/base/tests/textarea-minlength-valid-change.html
@@ -118,6 +118,21 @@ textarea
 ;
 textarea
 .
+setSelectionRange
+(
+textarea
+.
+value
+.
+length
+textarea
+.
+value
+.
+length
+)
+textarea
+.
 focus
 (
 )
