Bug 1213767 - Rule-view class toggle panel. r=jdescottes
MozReview-Commit-ID: 2roKEm6Jr26

UltraBlame original commit: a668191115832fb8edabe55f1370ebea8dffb0ac

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -292,20 +292,16 @@ display
 flex
 ;
 }
-#
-pseudo
+.
+ruleview
 -
-class
+reveal
 -
 panel
 {
 display
 :
 flex
-;
-height
-:
-24px
 ;
 overflow
 :
@@ -318,10 +314,10 @@ height
 ease
 ;
 }
-#
-pseudo
+.
+ruleview
 -
-class
+reveal
 -
 panel
 [
@@ -339,7 +335,25 @@ pseudo
 class
 -
 panel
->
+:
+not
+(
+[
+hidden
+]
+)
+{
+height
+:
+24px
+;
+}
+.
+ruleview
+-
+reveal
+-
+panel
 label
 {
 -
@@ -364,6 +378,257 @@ flex
 align
 -
 items
+:
+center
+;
+}
+/
+*
+Class
+toggle
+panel
+*
+/
+#
+ruleview
+-
+class
+-
+panel
+:
+not
+(
+[
+hidden
+]
+)
+{
+/
+*
+The
+class
+panel
+can
+contain
+0
+to
+N
+classes
+so
+we
+can
+'
+t
+hardcode
+a
+height
+here
+like
+we
+do
+for
+the
+pseudo
+-
+class
+panel
+.
+Unfortunately
+that
+means
+we
+don
+'
+t
+get
+the
+height
+transition
+when
+toggling
+the
+panel
+*
+/
+flex
+-
+direction
+:
+column
+;
+}
+#
+ruleview
+-
+class
+-
+panel
+.
+add
+-
+class
+{
+margin
+:
+0
+;
+border
+-
+width
+:
+0
+0
+1px
+0
+;
+padding
+:
+2px
+6px
+;
+border
+-
+radius
+:
+0
+;
+}
+#
+ruleview
+-
+class
+-
+panel
+.
+classes
+{
+display
+:
+flex
+;
+flex
+-
+direction
+:
+row
+;
+flex
+-
+wrap
+:
+wrap
+;
+}
+#
+ruleview
+-
+class
+-
+panel
+.
+classes
+{
+max
+-
+height
+:
+100px
+;
+overflow
+-
+y
+:
+auto
+;
+}
+#
+ruleview
+-
+class
+-
+panel
+.
+classes
+label
+{
+flex
+:
+0
+0
+;
+max
+-
+width
+:
+50
+%
+;
+}
+#
+ruleview
+-
+class
+-
+panel
+.
+classes
+label
+span
+{
+white
+-
+space
+:
+nowrap
+;
+text
+-
+overflow
+:
+ellipsis
+;
+overflow
+:
+hidden
+;
+}
+#
+ruleview
+-
+class
+-
+panel
+.
+no
+-
+classes
+{
+flex
+:
+1
+;
+color
+:
+var
+(
+-
+-
+theme
+-
+body
+-
+color
+-
+inactive
+)
+;
+margin
+:
+0
+;
+text
+-
+align
 :
 center
 ;
@@ -3254,6 +3519,34 @@ background
 size
 :
 cover
+;
+}
+#
+class
+-
+panel
+-
+toggle
+:
+:
+before
+{
+content
+:
+"
+.
+cls
+"
+;
+direction
+:
+ltr
+;
+font
+-
+size
+:
+11px
 ;
 }
 .
