Bug 1345574 - Fix missing tab details in pageAction.onClicked events on Android. r=kmag
MozReview-Commit-ID: EqnNcku8LHE

UltraBlame original commit: c3f5c270df0ef4e0cc0f99a2f3ad54adc8d2879b

--- a/mobile/android/components/extensions/test/mochitest/test_ext_pageAction.html
+++ b/mobile/android/components/extensions/test/mochitest/test_ext_pageAction.html
@@ -269,6 +269,7 @@ charCodeAt
 .
 buffer
 ;
+async
 function
 background
 (
@@ -323,27 +324,25 @@ pageAction
 "
 )
 ;
-/
-/
-TODO
-:
-Use
-the
-Tabs
-API
-to
-obtain
-the
-tab
-ids
-for
-showing
-pageActions
-.
-let
-tabId
+const
+tabs
 =
-1
+await
+browser
+.
+tabs
+.
+query
+(
+{
+active
+:
+true
+currentWindow
+:
+true
+}
+)
 ;
 browser
 .
@@ -376,7 +375,12 @@ pageAction
 .
 show
 (
-tabId
+tabs
+[
+0
+]
+.
+id
 )
 .
 then
@@ -425,7 +429,12 @@ pageAction
 .
 hide
 (
-tabId
+tabs
+[
+0
+]
+.
+id
 )
 .
 then
@@ -469,24 +478,6 @@ tab
 =
 >
 {
-/
-/
-TODO
-:
-Make
-sure
-we
-get
-the
-correct
-tab
-once
-basic
-tabs
-support
-is
-added
-.
 browser
 .
 test
@@ -500,12 +491,13 @@ action
 -
 clicked
 "
+tab
 )
 ;
 }
 )
 ;
-let
+const
 extensionInfo
 =
 {
@@ -532,6 +524,12 @@ location
 hostname
 }
 }
+tab
+:
+tabs
+[
+0
+]
 }
 ;
 browser
@@ -555,7 +553,7 @@ test_pageAction
 (
 )
 {
-let
+const
 extension
 =
 ExtensionTestUtils
@@ -648,9 +646,10 @@ startup
 (
 )
 ;
-let
+const
 {
 uuid
+tab
 }
 =
 yield
@@ -789,6 +788,9 @@ clickPageAction
 uuid
 )
 ;
+const
+clickedTab
+=
 yield
 extension
 .
@@ -819,6 +821,29 @@ shown
 after
 being
 clicked
+"
+)
+;
+is
+(
+clickedTab
+.
+id
+tab
+.
+id
+"
+Got
+the
+expected
+tab
+id
+in
+the
+pageAction
+.
+onClicked
+event
 "
 )
 ;
