Bug 1343570 - menupopup appearance for customoptionstyling needs to be in popup.css instead of menu.css because menu.css doesn't have access to the parent popup. r=mconley
MozReview-Commit-ID: LWkcjsN0mFt

UltraBlame original commit: 45afe80ae477bb4536c853bfc7f2e49c9ddbe71a

--- a/toolkit/themes/osx/global/popup.css
+++ b/toolkit/themes/osx/global/popup.css
@@ -955,3 +955,32 @@ padding
 0
 ;
 }
+menupopup
+[
+customoptionstyling
+=
+"
+true
+"
+]
+{
+-
+moz
+-
+appearance
+:
+none
+;
+padding
+-
+top
+:
+0
+;
+padding
+-
+bottom
+:
+0
+;
+}
