Bug 1019471 - Create a dialog to add/edit/view an autofill profile. r=MattN
MozReview-Commit-ID: avVGZAYq0y

UltraBlame original commit: e58b83fd06a9b138bdfaadbbc117edefcc687293

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -3884,6 +3884,26 @@ input
 type
 =
 "
+email
+"
+]
+html
+|
+input
+[
+type
+=
+"
+tel
+"
+]
+html
+|
+input
+[
+type
+=
+"
 text
 "
 ]
@@ -4105,6 +4125,26 @@ input
 type
 =
 "
+email
+"
+]
+html
+|
+input
+[
+type
+=
+"
+tel
+"
+]
+html
+|
+input
+[
+type
+=
+"
 text
 "
 ]
@@ -4130,6 +4170,30 @@ padding
 10px
 ;
 }
+html
+|
+input
+[
+type
+=
+"
+email
+"
+]
+:
+focus
+html
+|
+input
+[
+type
+=
+"
+tel
+"
+]
+:
+focus
 html
 |
 input
@@ -4172,6 +4236,30 @@ focus
 )
 ;
 }
+html
+|
+input
+[
+type
+=
+"
+email
+"
+]
+:
+disabled
+html
+|
+input
+[
+type
+=
+"
+tel
+"
+]
+:
+disabled
 html
 |
 input
