--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -6119,43 +6119,23 @@ none
 ;
 }
 statuspanel
-:
--
-moz
--
-locale
--
-dir
-(
-ltr
-)
 [
 mirror
 ]
-statuspanel
-:
--
-moz
--
-locale
--
-dir
-(
-rtl
-)
-:
-not
-(
-[
-mirror
-]
-)
 {
-left
+offset
+-
+inline
+-
+start
 :
 auto
 ;
-right
+offset
+-
+inline
+-
+end
 :
 0
 ;
@@ -6229,6 +6209,19 @@ ease
 -
 out
 ;
+}
+statuspanel
+[
+type
+=
+overLink
+]
+>
+.
+statuspanel
+-
+inner
+{
 direction
 :
 ltr
