Bug 1341985 - Use registerCleanupFunction to restore to normal refresh mode. r=heycam
Otherwise, the refresh driver left under test mode when a javascript error
occurs in the middle of tests.

MozReview-Commit-ID: J7oUuuYhTZ1

UltraBlame original commit: 13ad5103ea6287d7c11a4984561aacd5c668e21c

--- a/layout/style/test/test_animations.html
+++ b/layout/style/test/test_animations.html
@@ -1524,6 +1524,26 @@ advance_clock
 0
 )
 ;
+SimpleTest
+.
+registerCleanupFunction
+(
+(
+)
+=
+>
+{
+SpecialPowers
+.
+DOMWindowUtils
+.
+restoreNormalRefresh
+(
+)
+;
+}
+)
+;
 /
 *
 *
@@ -22598,14 +22618,6 @@ accepted
 )
 ;
 done_div
-(
-)
-;
-SpecialPowers
-.
-DOMWindowUtils
-.
-restoreNormalRefresh
 (
 )
 ;
