Bug 1287763 - Use flat yosemite-style border-box for focused styling in OSX, in more places r=Gijs * Fix border-box styles for focused elements/controls in editBookmarkPanel, identity-container, tracking-protection-container, tabbedbrowser tabs * Define a --focus-ring-box-shadow variable for osx, override for -moz-mac-yosemite-theme. * Replace hudButtonFocused withe focus-ring-box-shadow variable. * Fix text-link focus styles and other stragglers in toolkit osx theme
MozReview-Commit-ID: 9c1w87Rgdm3

UltraBlame original commit: 057d31114af0fdf9488d651a07a1dcc6815d2b1b

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -13357,49 +13357,19 @@ box
 -
 shadow
 :
-focusRingShadow
-;
-}
-media
+var
 (
 -
-moz
 -
-mac
+focus
 -
-yosemite
+ring
 -
-theme
-)
-{
-#
-urlbar
-[
-focused
-=
-"
-true
-"
-]
-.
-searchbar
--
-textbox
-[
-focused
-=
-"
-true
-"
-]
-{
 box
 -
 shadow
-:
-yosemiteFocusRingShadow
+)
 ;
-}
 }
 #
 urlbar
@@ -13893,27 +13863,18 @@ box
 -
 shadow
 :
-0
-0
-2px
-1px
+var
+(
 -
-moz
 -
-mac
+focus
 -
-focusring
-inset
-0
-0
-2px
-2px
+ring
 -
-moz
+box
 -
-mac
--
-focusring
+shadow
+)
 ;
 border
 -
@@ -17191,7 +17152,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 ;
 }
 /
@@ -17260,7 +17232,23 @@ moz
 -
 focusring
 {
-hudButtonFocused
+box
+-
+shadow
+:
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
+;
 }
 .
 editBookmarkPanelBottomButton
@@ -17608,7 +17596,23 @@ moz
 -
 focusring
 {
-hudButtonFocused
+box
+-
+shadow
+:
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
+;
 }
 #
 editBMPanel_newFolderButton
@@ -17681,7 +17685,23 @@ moz
 -
 focusring
 {
-hudButtonFocused
+box
+-
+shadow
+:
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
+;
 }
 #
 editBMPanel_folderMenuList
@@ -17924,7 +17944,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 ;
 }
 #
@@ -18059,7 +18090,23 @@ moz
 -
 focusring
 {
-hudButtonFocused
+box
+-
+shadow
+:
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
+;
 }
 #
 editBookmarkPanel
@@ -20738,7 +20785,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 ;
 }
 #
