--- a/browser/themes/osx/controlcenter/panel.css
+++ b/browser/themes/osx/controlcenter/panel.css
@@ -127,7 +127,23 @@ button
 -
 box
 {
-hudButtonFocused
+box
+-
+shadow
+:
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
+;
 }
 .
 identity
@@ -149,7 +165,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 ;
 }
 #
@@ -381,5 +408,21 @@ moz
 -
 focusring
 {
-hudButtonFocused
+box
+-
+shadow
+:
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
+;
 }
