--- a/toolkit/themes/osx/global/global.css
+++ b/toolkit/themes/osx/global/global.css
@@ -282,6 +282,47 @@ radius
 .
 5px
 ;
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+:
+focusRingShadow
+;
+}
+media
+(
+-
+moz
+-
+mac
+-
+yosemite
+-
+theme
+)
+{
+:
+root
+{
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+:
+yosemiteFocusRingShadow
+;
+}
 }
 /
 *
@@ -1324,7 +1365,18 @@ box
 -
 shadow
 :
-focusRingShadow
+var
+(
+-
+-
+focus
+-
+ring
+-
+box
+-
+shadow
+)
 ;
 }
 .
