Bug 1345603 - Add specification anchor to perspective-zero-2.html reftest r=xidorn
MozReview-Commit-ID: JPEh5Uz9dK3

UltraBlame original commit: 50deeb9c39761353bf001989cb5a53b8ed6c8a07

--- a/layout/reftests/w3c-css/submitted/transforms/perspective-zero-2.html
+++ b/layout/reftests/w3c-css/submitted/transforms/perspective-zero-2.html
@@ -96,6 +96,38 @@ https
 :
 /
 /
+drafts
+.
+csswg
+.
+org
+/
+css
+-
+transforms
+-
+2
+/
+#
+propdef
+-
+perspective
+"
+>
+<
+link
+rel
+=
+"
+help
+"
+href
+=
+"
+https
+:
+/
+/
 github
 .
 com
