Bug 1345432 - Clean up XUL checkbox styling, remove fallback styling and fix the focus indicator. r=karlt
MozReview-Commit-ID: CcqLKFVvLwC

UltraBlame original commit: 613fb48bd2a3e41ec7364dcafb8f9f3e1d9274dc

--- a/toolkit/themes/shared/in-content/common.inc.css
+++ b/toolkit/themes/shared/in-content/common.inc.css
@@ -4485,12 +4485,6 @@ height
 23px
 ;
 border
--
-radius
-:
-2px
-;
-border
 :
 1px
 solid
@@ -4508,6 +4502,16 @@ border
 -
 color
 )
+;
+border
+-
+radius
+:
+2px
+;
+margin
+:
+0
 ;
 margin
 -
