Bug 1346402 - Update pdf.js to version 1.7.359. r=bdahl
UltraBlame original commit: 8d46a3630226b686569a92c0b4681c65d3bd053a

--- a/browser/extensions/pdfjs/content/web/viewer.css
+++ b/browser/extensions/pdfjs/content/web/viewer.css
@@ -2768,7 +2768,7 @@ index
 ;
 height
 :
-32px
+auto
 ;
 min
 -
@@ -2824,6 +2824,52 @@ cursor
 default
 ;
 }
+.
+findbar
+{
+min
+-
+width
+:
+300px
+;
+}
+.
+findbar
+>
+div
+{
+height
+:
+32px
+;
+}
+.
+findbar
+.
+wrapContainers
+>
+div
+{
+clear
+:
+both
+;
+}
+.
+findbar
+.
+wrapContainers
+>
+div
+#
+findbarMessageContainer
+{
+height
+:
+auto
+;
+}
 html
 [
 dir
@@ -2868,6 +2914,43 @@ user
 select
 :
 none
+;
+}
+#
+findInput
+{
+width
+:
+200px
+;
+}
+#
+findInput
+:
+:
+-
+moz
+-
+placeholder
+{
+font
+-
+style
+:
+italic
+;
+}
+#
+findInput
+:
+:
+placeholder
+{
+font
+-
+style
+:
+italic
 ;
 }
 #
@@ -3382,6 +3465,16 @@ A6B7D0
 ;
 }
 #
+findMsg
+:
+empty
+{
+display
+:
+none
+;
+}
+#
 findInput
 .
 notFound
@@ -3518,7 +3611,6 @@ ltr
 ]
 .
 findbar
->
 *
 {
 position
@@ -3576,7 +3668,6 @@ rtl
 ]
 .
 findbar
->
 *
 {
 position
@@ -3757,18 +3848,6 @@ opacity
 :
 .
 5
-;
-}
-.
-toolbarButton
-.
-group
-{
-margin
--
-right
-:
-0
 ;
 }
 .
@@ -12169,6 +12248,9 @@ width
 {
 .
 hiddenSmallView
+.
+hiddenSmallView
+*
 {
 display
 :
@@ -12189,6 +12271,38 @@ toolbarButtonSpacer
 width
 :
 0
+;
+}
+html
+[
+dir
+=
+'
+ltr
+'
+]
+.
+findbar
+{
+left
+:
+38px
+;
+}
+html
+[
+dir
+=
+'
+rtl
+'
+]
+.
+findbar
+{
+right
+:
+38px
 ;
 }
 }
