Bug 1323158 - Part 4: Refine PE boundary events related testcases since boundary events are fired after capturing or releasing the pointer. r=smaug
UltraBlame original commit: de1f28ab01a172a139b1e5534f1d1b162e5cc8d2

--- a/layout/base/tests/bug1078327_inner.html
+++ b/layout/base/tests/bug1078327_inner.html
@@ -237,6 +237,11 @@ test_listener
 =
 false
 ;
+var
+test_lost_capture
+=
+false
+;
 function
 TargetHandler
 (
@@ -279,6 +284,10 @@ test_target
 =
 true
 ;
+test_capture
+=
+true
+;
 }
 function
 MediatorHandler
@@ -299,21 +308,6 @@ event
 .
 type
 )
-;
-if
-(
-event
-.
-type
-=
-=
-"
-gotpointercapture
-"
-)
-test_capture
-=
-true
 ;
 if
 (
@@ -378,9 +372,9 @@ type
 lostpointercapture
 "
 )
-test_capture
+test_lost_capture
 =
-false
+true
 ;
 }
 function
@@ -812,19 +806,13 @@ parent
 .
 is
 (
-test_capture
-false
+test_lost_capture
+true
 "
-test_capture
+mediator
 should
-be
-false
-at
-the
-end
-of
-the
-test
+receive
+lostpointercapture
 "
 )
 ;
