--- a/layout/base/tests/bug1162990_inner_1.html
+++ b/layout/base/tests/bug1162990_inner_1.html
@@ -761,13 +761,12 @@ parent
 is
 (
 test_basketLeave
-0
+1
 "
 Part1
 :
 basket
 should
-not
 receive
 pointerleave
 event
@@ -816,7 +815,7 @@ parent
 is
 (
 test_targetLeave
-2
+1
 "
 Part1
 :
@@ -825,8 +824,9 @@ should
 receive
 pointerleave
 event
-two
-times
+only
+one
+time
 "
 )
 ;
