--- a/layout/base/tests/bug977003_inner_5.html
+++ b/layout/base/tests/bug977003_inner_5.html
@@ -278,6 +278,11 @@ test_move_listener
 false
 ;
 var
+test_over_listener
+=
+false
+;
+var
 test_listener
 =
 false
@@ -476,6 +481,32 @@ true
 ;
 }
 function
+ListenerOverHandler
+(
+event
+)
+{
+logger
+(
+"
+Receive
+event
+on
+Listener
+:
+"
++
+event
+.
+type
+)
+;
+test_over_listener
+=
+true
+;
+}
+function
 ListenerHandler
 (
 event
@@ -627,7 +658,7 @@ addEventListener
 "
 pointerover
 "
-ListenerHandler
+ListenerOverHandler
 )
 ;
 listener
@@ -935,6 +966,26 @@ be
 triggered
 by
 pointermove
+"
+)
+;
+parent
+.
+is
+(
+test_over_listener
+true
+"
+Part
+5
+:
+listener
+should
+receive
+pointerover
+when
+capturing
+pointer
 "
 )
 ;
