--- a/layout/base/tests/bug977003_inner_6.html
+++ b/layout/base/tests/bug977003_inner_6.html
@@ -215,6 +215,11 @@ test_move
 false
 ;
 var
+test_over
+=
+false
+;
+var
 test_listener
 =
 false
@@ -430,6 +435,24 @@ pointermove
 )
 {
 test_move
+=
+true
+;
+}
+else
+if
+(
+event
+.
+type
+=
+=
+"
+pointerover
+"
+)
+{
+test_over
 =
 true
 ;
@@ -772,6 +795,26 @@ parent
 .
 is
 (
+test_over
+true
+"
+Part
+6
+:
+pointerover
+should
+be
+received
+when
+capturing
+pointer
+"
+)
+;
+parent
+.
+is
+(
 test_listener
 false
 "
@@ -786,6 +829,8 @@ be
 fired
 before
 gotpointercapture
+except
+pointerover
 "
 )
 ;
