Bug 1345716 - Make default notification anchor icon be part of notification-icons.svg. r=johannh
MozReview-Commit-ID: FzYBHvYQlDN

UltraBlame original commit: 22d5bcbc967a446beff740aad3eee949e449da93

--- a/browser/themes/shared/notification-icons.inc.css
+++ b/browser/themes/shared/notification-icons.inc.css
@@ -185,38 +185,6 @@ anchor
 -
 icon
 {
-%
-ifdef
-MOZ_WIDGET_GTK
-list
--
-style
--
-image
-:
-url
-(
-moz
--
-icon
-:
-/
-/
-stock
-/
-gtk
--
-dialog
--
-info
-?
-size
-=
-16
-)
-;
-%
-else
 list
 -
 style
@@ -229,100 +197,21 @@ chrome
 :
 /
 /
-global
+browser
 /
 skin
 /
-icons
-/
-information
--
-16
-.
-png
-)
-;
-%
-endif
-}
-media
-(
-min
--
-resolution
-:
-1
-.
-1dppx
-)
-{
-.
 notification
 -
-anchor
--
-icon
-{
-%
-ifdef
-MOZ_WIDGET_GTK
-list
--
-style
--
-image
-:
-url
-(
-moz
--
-icon
-:
-/
-/
-stock
-/
-gtk
--
-dialog
+icons
+.
+svg
+#
+default
 -
 info
-?
-size
-=
-dialog
 )
 ;
-%
-else
-list
--
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
-information
--
-32
-.
-png
-)
-;
-%
-endif
-}
 }
 .
 notification
