--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -984,6 +984,16 @@ devtools
 -
 tab
 {
+display
+:
+flex
+;
+align
+-
+items
+:
+center
+;
 min
 -
 width
@@ -1044,18 +1054,97 @@ overflow
 :
 hidden
 ;
-text
--
-overflow
-:
-ellipsis
-;
 background
 -
 color
 :
 transparent
 ;
+}
+/
+*
+Hide
+tab
+icons
+when
+the
+viewport
+width
+is
+limited
+*
+/
+media
+(
+max
+-
+width
+:
+700px
+)
+{
+/
+*
+Hide
+the
+icons
+reduce
+the
+margins
+to
+5px
+and
+set
+the
+width
+to
+0
+*
+/
+.
+devtools
+-
+tab
+:
+not
+(
+.
+devtools
+-
+tab
+-
+icon
+-
+only
+)
+>
+img
+{
+visibility
+:
+hidden
+;
+margin
+-
+inline
+-
+start
+:
+5px
+;
+margin
+-
+inline
+-
+end
+:
+0
+;
+width
+:
+0
+;
+}
 }
 .
 devtools
@@ -1073,45 +1162,6 @@ inline
 end
 :
 2px
-;
-}
-.
-devtools
--
-tab
-span
-{
-white
--
-space
-:
-nowrap
-;
-overflow
-:
-hidden
-;
-text
--
-overflow
-:
-ellipsis
-;
-padding
--
-inline
--
-end
-:
-13px
-;
-position
-:
-relative
-;
-top
-:
-1px
 ;
 }
 /
@@ -1504,6 +1554,14 @@ start
 :
 10px
 ;
+margin
+-
+inline
+-
+end
+:
+5px
+;
 opacity
 :
 0
@@ -1537,13 +1595,11 @@ text
 -
 top
 ;
-margin
+flex
 -
-inline
--
-end
+shrink
 :
-6px
+0
 ;
 }
 /
