Bug 1338106 - Add mask-image to fade out text of devtools-tabs;r=ntim
Also fixes a slight issue in firebug theme that made the text slide of
1 px down when selecting a tab.

MozReview-Commit-ID: KNm9Xf21p2D

UltraBlame original commit: 18a136d5ca3f5b73d7ec3aa4584529ca6471403a

--- a/devtools/client/themes/firebug-theme.css
+++ b/devtools/client/themes/firebug-theme.css
@@ -816,6 +816,16 @@ padding
 !
 important
 ;
+padding
+-
+inline
+-
+end
+:
+0
+!
+important
+;
 border
 :
 1px
@@ -962,15 +972,36 @@ firebug
 devtools
 -
 tab
-span
+-
+label
 {
+/
+*
+Set
+the
+end
+padding
+on
+the
+label
+to
+make
+sure
+the
+label
+gets
+faded
+out
+properly
+*
+/
 padding
 -
 inline
 -
 end
 :
-0
+4px
 ;
 }
 /
@@ -1130,9 +1161,9 @@ border
 -
 bottom
 -
-width
+color
 :
-0
+transparent
 !
 important
 ;
