--- a/devtools/client/themes/toolbox.css
+++ b/devtools/client/themes/toolbox.css
@@ -984,6 +984,10 @@ devtools
 -
 tab
 {
+position
+:
+relative
+;
 display
 :
 flex
@@ -1036,14 +1040,6 @@ width
 :
 1px
 ;
-padding
--
-inline
--
-end
-:
-10px
-;
 white
 -
 space
@@ -1054,11 +1050,109 @@ overflow
 :
 hidden
 ;
+text
+-
+overflow
+:
+ellipsis
+;
 background
 -
 color
 :
 transparent
+;
+}
+.
+devtools
+-
+tab
+-
+label
+{
+mask
+-
+image
+:
+linear
+-
+gradient
+(
+to
+left
+transparent
+0
+black
+6px
+)
+;
+/
+*
+Set
+the
+end
+padding
+on
+the
+label
+to
+make
+sure
+the
+label
+gets
+faded
+out
+properly
+*
+/
+padding
+-
+inline
+-
+end
+:
+10px
+;
+min
+-
+width
+:
+1px
+;
+}
+.
+devtools
+-
+tab
+-
+label
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+mask
+-
+image
+:
+linear
+-
+gradient
+(
+to
+right
+transparent
+0
+black
+6px
+)
 ;
 }
 /
@@ -1083,22 +1177,75 @@ width
 700px
 )
 {
+.
+devtools
+-
+tab
+-
+label
+{
+/
+*
+Set
+the
+end
+padding
+on
+the
+label
+to
+make
+sure
+the
+label
+gets
+faded
+out
+properly
+*
+/
+padding
+-
+inline
+-
+end
+:
+5px
+;
+}
+.
+devtools
+-
+tab
+:
+not
+(
+.
+devtools
+-
+tab
+-
+icon
+-
+only
+)
+{
+padding
+-
+inline
+-
+start
+:
+5px
+!
+important
+;
+}
 /
 *
 Hide
 the
 icons
-reduce
-the
-margins
-to
-5px
-and
-set
-the
-width
-to
-0
 *
 /
 .
@@ -1120,29 +1267,9 @@ only
 >
 img
 {
-visibility
+display
 :
-hidden
-;
-margin
--
-inline
--
-start
-:
-5px
-;
-margin
--
-inline
--
-end
-:
-0
-;
-width
-:
-0
+none
 ;
 }
 }
@@ -1155,13 +1282,11 @@ icon
 -
 only
 {
-padding
+min
 -
-inline
--
-end
+width
 :
-2px
+24px
 ;
 }
 /
@@ -1906,22 +2031,6 @@ devtools
 tab
 .
 highlighted
-{
-border
--
-width
-:
-0
-;
-padding
--
-inline
--
-start
-:
-1px
-;
-}
 .
 toolbox
 -
@@ -1959,17 +2068,9 @@ inline
 -
 start
 -
-width
+color
 :
-0
-;
-padding
--
-inline
--
-start
-:
-1px
+transparent
 ;
 }
 .
@@ -2143,20 +2244,9 @@ container
 img
 {
 margin
--
-inline
--
-end
 :
-6px
-;
-margin
--
-inline
--
-start
-:
-6px
+0
+3px
 ;
 }
 /
