Bug 1347113 - Use CSS outline instead of border for XUL checkbox focus ring. r=mikedeboer
MozReview-Commit-ID: 22QNiw0bKmw

UltraBlame original commit: d9aeb5fbd1796ba98e7bf3dfd630a06c4f604f28

--- a/toolkit/themes/windows/global/checkbox.css
+++ b/toolkit/themes/windows/global/checkbox.css
@@ -300,33 +300,6 @@ end
 .
 checkbox
 -
-label
--
-box
-{
-margin
--
-inline
--
-start
-:
-2px
-;
-border
-:
-1px
-solid
-transparent
-;
-padding
-:
-0px
-1px
-;
-}
-.
-checkbox
--
 icon
 {
 margin
@@ -380,11 +353,10 @@ label
 -
 box
 {
-border
+outline
 :
 1px
 dotted
-ThreeDDarkShadow
 ;
 }
 /
@@ -590,6 +562,14 @@ repeat
 %
 50
 %
+;
+margin
+-
+inline
+-
+end
+:
+3px
 ;
 }
 checkbox
