Bug 1279605 - Align 'No Open Tabs' label with other labels in Synced Tabs panel. r=markh
MozReview-Commit-ID: 4LEwlpPNU2O

UltraBlame original commit: 2a98aff62a58b4422aaaf5e1482661bb907711a7

--- a/browser/themes/osx/customizableui/panelUI.css
+++ b/browser/themes/osx/customizableui/panelUI.css
@@ -572,6 +572,29 @@ size
 PanelUI
 -
 remotetabs
+[
+mainview
+]
+.
+PanelUI
+-
+remotetabs
+-
+notabsforclient
+-
+label
+{
+margin
+-
+left
+:
+23px
+;
+}
+#
+PanelUI
+-
+remotetabs
 -
 tabslist
 {
