--- a/browser/themes/shared/customizableui/panelUI.inc.css
+++ b/browser/themes/shared/customizableui/panelUI.inc.css
@@ -6764,6 +6764,29 @@ left
 28px
 ;
 }
+#
+PanelUI
+-
+remotetabs
+[
+mainview
+]
+.
+PanelUI
+-
+remotetabs
+-
+notabsforclient
+-
+label
+{
+margin
+-
+left
+:
+32px
+;
+}
 .
 fxaSyncIllustration
 {
