Bug 1342002 - Border color of overriden items in Rule view looks lighter than font color in dark theme. r=gl
MozReview-Commit-ID: CazYLmKktx

UltraBlame original commit: 2bb938116a714bfb36c71d0e64fdc5af664689da

--- a/devtools/client/themes/rules.css
+++ b/devtools/client/themes/rules.css
@@ -92,6 +92,29 @@ color
 #
 ffee99
 ;
+-
+-
+rule
+-
+overridden
+-
+item
+-
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+content
+-
+color3
+)
+;
 }
 .
 theme
@@ -110,6 +133,29 @@ color
 :
 #
 594724
+;
+-
+-
+rule
+-
+overridden
+-
+item
+-
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+content
+-
+color1
+)
 ;
 }
 .
@@ -149,6 +195,29 @@ property
 value
 :
 darkblue
+;
+-
+-
+rule
+-
+overridden
+-
+item
+-
+border
+-
+color
+:
+var
+(
+-
+-
+theme
+-
+content
+-
+color2
+)
 ;
 }
 /
@@ -2383,40 +2452,52 @@ border
 -
 left
 :
-1px
+0
+.
+5px
 solid
 var
 (
 -
 -
-theme
+rule
 -
-highlight
+overridden
 -
-gray
+item
+-
+border
+-
+color
 )
 ;
 height
 :
 0
 .
-7em
+8em
 ;
 border
 -
 bottom
 :
-1px
+0
+.
+5px
 solid
 var
 (
 -
 -
-theme
+rule
 -
-highlight
+overridden
 -
-gray
+item
+-
+border
+-
+color
 )
 ;
 width
@@ -2461,17 +2542,23 @@ border
 -
 left
 :
-1px
+0
+.
+5px
 solid
 var
 (
 -
 -
-theme
+rule
 -
-highlight
+overridden
 -
-gray
+item
+-
+border
+-
+color
 )
 ;
 height
