Bug 1299281 - Style the cert_domain_link in the certificate error page to look like normal text when it does not link to anything. r=johannh
MozReview-Commit-ID: J515XWhwozK

UltraBlame original commit: 558e813c8a92094c8be4eb1f054fab2924f91c52

--- a/browser/themes/shared/aboutNetError.css
+++ b/browser/themes/shared/aboutNetError.css
@@ -750,3 +750,35 @@ padding
 0
 ;
 }
+#
+cert_domain_link
+:
+not
+(
+[
+href
+]
+)
+{
+color
+:
+var
+(
+-
+-
+in
+-
+content
+-
+page
+-
+color
+)
+;
+text
+-
+decoration
+:
+none
+;
+}
