Bug 940275 - Part 1: Add positioning properties to box model r=gl
MozReview-Commit-ID: AB5fREjDhsD

UltraBlame original commit: 9ed72c2f16d83e3a56a756da0fd7a07ac93397f6

--- a/devtools/client/themes/boxmodel.css
+++ b/devtools/client/themes/boxmodel.css
@@ -112,6 +112,10 @@ padding
 :
 0
 ;
+overflow
+:
+auto
+;
 }
 /
 *
@@ -196,37 +200,6 @@ position
 :
 relative
 ;
-box
--
-sizing
-:
-border
--
-box
-;
-/
-*
-The
-regions
-are
-semi
--
-transparent
-so
-the
-white
-background
-is
-partly
-visible
-*
-/
-background
--
-color
-:
-white
-;
 color
 :
 var
@@ -277,6 +250,45 @@ calc
 *
 14px
 )
+;
+min
+-
+width
+:
+240px
+;
+}
+.
+boxmodel
+-
+box
+{
+margin
+:
+25px
+;
+/
+*
+The
+regions
+are
+semi
+-
+transparent
+so
+the
+white
+background
+is
+partly
+visible
+*
+/
+background
+-
+color
+:
+white
 ;
 }
 .
@@ -464,38 +476,6 @@ color
 :
 #
 87ceeb
-;
-}
-.
-theme
--
-firebug
-.
-boxmodel
--
-main
-.
-theme
--
-firebug
-.
-boxmodel
--
-borders
-.
-theme
--
-firebug
-.
-boxmodel
--
-content
-{
-border
--
-style
-:
-solid
 ;
 }
 .
@@ -797,6 +777,22 @@ size
 .
 boxmodel
 -
+position
+.
+boxmodel
+-
+left
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+right
+.
+boxmodel
+-
 margin
 .
 boxmodel
@@ -873,6 +869,38 @@ calc
 .
 boxmodel
 -
+position
+.
+boxmodel
+-
+top
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+bottom
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+left
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+right
+.
+boxmodel
+-
 margin
 .
 boxmodel
@@ -935,7 +963,7 @@ left
 {
 left
 :
-35px
+60px
 ;
 }
 .
@@ -949,7 +977,7 @@ right
 {
 right
 :
-35px
+60px
 ;
 }
 .
@@ -963,7 +991,7 @@ left
 {
 left
 :
-16px
+41px
 ;
 }
 .
@@ -977,7 +1005,7 @@ right
 {
 right
 :
-17px
+42px
 ;
 }
 .
@@ -991,7 +1019,7 @@ right
 {
 right
 :
-0
+25px
 ;
 }
 .
@@ -1005,7 +1033,7 @@ left
 {
 left
 :
-0
+25px
 ;
 }
 .
@@ -1057,6 +1085,304 @@ rotate
 (
 90deg
 )
+;
+}
+.
+boxmodel
+-
+rotate
+.
+boxmodel
+-
+left
+.
+boxmodel
+-
+position
+:
+not
+(
+.
+boxmodel
+-
+editing
+)
+{
+border
+-
+top
+:
+none
+;
+border
+-
+right
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+width
+:
+auto
+;
+height
+:
+30px
+;
+}
+.
+boxmodel
+-
+rotate
+.
+boxmodel
+-
+right
+.
+boxmodel
+-
+position
+:
+not
+(
+.
+boxmodel
+-
+editing
+)
+{
+border
+-
+top
+:
+none
+;
+border
+-
+left
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+width
+:
+auto
+;
+height
+:
+30px
+;
+}
+/
+*
+Box
+Model
+Positioning
+:
+contains
+top
+right
+bottom
+left
+*
+/
+.
+boxmodel
+-
+position
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+}
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+top
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+bottom
+{
+border
+-
+left
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+left
+:
+49
+.
+5
+%
+;
+padding
+-
+left
+:
+1px
+;
+}
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+right
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+left
+{
+border
+-
+top
+:
+1px
+solid
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+line
+-
+height
+:
+15px
+;
+top
+:
+49
+.
+5
+%
+;
+width
+:
+30px
+;
+}
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+top
+{
+top
+:
+-
+18px
+;
+}
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+right
+{
+right
+:
+-
+9px
+;
+}
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+bottom
+{
+bottom
+:
+-
+18px
+;
+}
+.
+boxmodel
+-
+position
+.
+boxmodel
+-
+left
+{
+left
+:
+-
+9px
 ;
 }
 /
@@ -1115,6 +1441,41 @@ highlight
 -
 blue
 )
+;
+}
+.
+boxmodel
+-
+legend
+[
+data
+-
+box
+=
+"
+position
+"
+]
+{
+color
+:
+var
+(
+-
+-
+theme
+-
+highlight
+-
+purple
+)
+;
+margin
+:
+-
+18px
+-
+9px
 ;
 }
 /
