--- a/devtools/client/themes/storage.css
+++ b/devtools/client/themes/storage.css
@@ -219,6 +219,39 @@ width
 250px
 ;
 }
+#
+storage
+-
+toolbar
+.
+devtools
+-
+button
+{
+min
+-
+width
+:
+unset
+;
+}
+#
+storage
+-
+toolbar
+.
+sidebar
+-
+toggle
+[
+hidden
+]
+{
+display
+:
+none
+;
+}
 /
 *
 Responsive
